--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            "Hello World"
+            Hello World version 2 
         </title>
     </head>
     <body>
