added changes to css and html. Hope this works

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>
-            Hello World version 2 
-        </title>
-    </head>
-    <body>
-
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello World version 2</title>
+</head>
+<body>
+    <h1>Dopeness</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam laudantium architecto perspiciatis mollitia tempore obcaecati ducimus, deleniti debitis perferendis? Nostrum, perspiciatis. Adipisci totam, quo dolores praesentium possimus rem rerum!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam laudantium architecto perspiciatis mollitia tempore obcaecati ducimus, deleniti debitis perferendis? Nostrum, perspiciatis. Adipisci totam, quo dolores praesentium possimus rem rerum!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam laudantium architecto perspiciatis mollitia tempore obcaecati ducimus, deleniti debitis perferendis? Nostrum, perspiciatis. Adipisci totam, quo dolores praesentium possimus rem rerum!</p>
+</body>
 </html>
-
